Tue Aug  9 12:20:33 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* test/fiddle/helper.rb (libc_so, libm_so): Solaris support added.
	  [ruby-core:38853] [Bug #5168]

	* test/dl/test_base.rb (libc_so, libm_so): on Solaris, remove libc
	  and libm version numbers for detecting default libc and libm.

Tue Aug  9 09:18:04 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c (gzfile_wrap):  Document encoding options.
	* ext/zlib/zlib.c (rb_gzwriter_s_open): ditto
	* ext/zlib/zlib.c (rb_gzreader_s_open): ditto

Sun Aug  7 23:31:32 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* time.c (rb_strftime_alloc): raise ERANGE if width is too large.
	  Patch by Nobuyoshi Nakada. [Bug #4457] [ruby-dev:43285]

	* test/ruby/test_time.rb (class TestTime): add a test for the
	  above change.

Sun Aug  7 22:51:45 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_asn1.c (decode_eoc): remove unused variables.
	  Patch by Eric Wong. [Feature #5157] [ruby-core:38798]
	* ext/openssl/ossl_asn1.c (ossl_asn1_decode): ditto.
	* ext/openssl/ossl_pkey.c (ossl_pkey_new_from_data): ditto.

Sun Aug  7 22:37:08 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: add -Wunused-variable to default CFLAGS.
	  Patch by Eric Wong. [Feature #5157] [ruby-core:38798]

Sun Aug  7 15:37:35 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/sha2/sha2ossl.c: use original SHA384_Final on DragonFly.

Sun Aug  7 14:08:16 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/objspace/objspace.c: fix typos in a document.

Sun Aug  7 07:14:57 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (HAVE_GETCONTEXT): see getcontext(3) because DragonFly BSD
	  x64 port doesn't have it.

Sun Aug  7 00:42:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/tk/lib/tk/wm.rb (Tk::Wm.command): Add the missing receiver
	  before calling epath. patched by flori
	  https://github.com/flori/ruby/commit/aa9474d32e5f2c57f8b0e2e0c528a03f06a4d433
